# Cameradetect

./: CMakeLists.txt  camera.c  camera.h  common.h  iodetect.c  iodetect.h  main.c  shellDbus.c  shellDbus.h  shincoDbus.c  shincoDbus.h  touchevent.c  touchevent.h
cmake/Modules/: FindGIO.cmake  FindGLIB.cmake  FindGStreamer.cmake
linux/: ipu.h  mxcfb.h
